[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.poetry]
name = 'sample_package'
version = '0.1.0'
description = 'Hi.'
authors = ['Nicolai Ruckel <nicolai.ruckel@uni-weimar.de>']
keywords=['sample']
license='GPL-3.0+'
packages = [
    { include = 'sample_package', from = 'src' },
]

[tool.poetry.dependencies]
python = '^3.6'

[tool.poetry.dev-dependencies]
black = { version = '*', allow-prereleases = true }
coverage = '^5.1'
flake8 = "^3.7.9"
pylint = "^2.6.0"
pytest = '^5.1'
pytest-cov = '^2.7'
pydocstyle = "^5.0.2"
Sphinx = "^4.0.2"
sphinxcontrib-spelling = "^7.2.1"

[tool.pylint.basic]
good-names = "i,id"

[tool.pylint.master]
disable=["C0114","C0115","C0116","E0401","R0801","R0902","R0903","R0912","R0913","R0914","R0915","R1702","W0511"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
