[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.poetry]
name = 'CfgNet'
version = '1.0.2'
description = 'A Framework for Tracking Configuration Dependencies Across a Software Project'
authors = [
  'Sebastian Simon <ssimon@informatik.uni-leipzig.de>',
  'Nicolai Ruckel <nicolai.ruckel@uni-weimar.de>',
  'Jakob Ruckel <jakob.bela.ruckel@uni-weimar.de>'
  ]
maintainers = [
    'Sebastian Simon <ssimon@informatik.uni-leipzig.de>',
    'Nicolai Ruckel <nicolai.ruckel@uni-weimar.de>',
    ]
readme = 'README.md'
keywords=['configuration']
license='GPL-3.0+'
homepage= 'https://github.com/digital-bauhaus/CfgNet'
packages = [
    { include = 'cfgnet', from = 'src' },
]

[tool.poetry.dependencies]
python = '>=3.8,<3.12'
mypy = "1.2"
lxml = "^4.6.3"
GitPython = "^3.1.24"
click = "^8.0.3"
graphviz = "^0.17"
PyYAML = "^6.0"
types-PyYAML = "^6.0.1"
types-toml = "^0.10.1"
Sphinx = "^4.4.0"
sphinxcontrib-spelling = "^7.3.2"
flatdict = "^4.0.1"
dockerfile = "^3.2.0"
apacheconfig = "^0.3.2"

[tool.poetry.dev-dependencies]
black = { version = '*', allow-prereleases = true }
coverage = '^5.1'
flake8 = "^3.7.9"
pylint = "^2.6.0"
pytest = '^6.2.5'
pytest-cov = '^2.7'
pydocstyle = "^5.0.2"
Sphinx = "^4.0.2"
sphinxcontrib-spelling = "^7.2.1"

[tool.poetry.scripts]
cfgnet = 'cfgnet.launcher:main'

[tool.pylint.basic]
good-names = "i,id"

[tool.pylint.master]
disable=["C0114","C0115","C0116","E0401","R0801","R0902","R0903","R0912","R0913","R0914","R0915","R1702","W0511"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
